--- a/UMES-DD-1P-01-2025/UMES-DD-1P-01-2025-SHARON-NOJ/styles.css
+++ b/UMES-DD-1P-01-2025/UMES-DD-1P-01-2025-SHARON-NOJ/styles.css
@@ -1,24 +1,49 @@
-.container {
-    background-color: #FFFFFF; 
-    color: #333;
-    padding: 20px;
-    font-size: 24px;
-    font-weight: bold;
-    height: 10vh;
-}
-
-.header {
-    display: flex;
-    justify-content: flex-end; 
-    padding: 10px;
-    border-bottom: 1px solid #000;
-    box-shadow: 0 15px 15px -15px rgba(0, 0, 0, 0.5);
-}
-.body {
-    font-family: Arial, sans-serif;
+body {
+    background-color: #E0E0E0;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+}
+
+header {
+    background-color: white;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    border-bottom: 1px solid black;
+    box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.1);
+    transition: background-color 1s, color 1s;
+}
+
+header:hover {
+    background-color: black;
+    color: white;
+}
+
+main {
+    padding-top: 12vh;
     text-align: center;
-    border-width: 1;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: none;
+}
+
+/**Mostrar el footer solo cuando se llegue al final de la página */
+body::-webkit-scrollbar {
+    width: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: gray;
+    border-radius: 5px;
 }
